update icons again

--- a/demo/px-inbox-detail-demo.html
+++ b/demo/px-inbox-detail-demo.html
@@ -33,7 +33,7 @@ we've done in this file, or you could define your view in plain HTML/JS/CSS or a
      <template is="dom-if" if="{{isSelected}}">
       <div class="heading--page flex flex--left">{{title}}</div>
       <div class="details">
-        <span class="heading--section"><px-icon class="u-mr-" icon="pxl:alerts"></px-icon>Alert Information</span>
+        <span class="heading--section"><px-icon class="u-mr-" icon="px-fea:alerts"></px-icon>Alert Information</span>
         <div class="flex u-mt">
           <div class="flex__item">
             <span class="label">Alert ID</span><br/>
@@ -56,7 +56,7 @@ we've done in this file, or you could define your view in plain HTML/JS/CSS or a
         </div>
       </div>
       <div class="details">
-        <span class="heading--section"><px-icon class="u-mr-" icon="pxl:asset"></px-icon>Asset Information</span>
+        <span class="heading--section"><px-icon class="u-mr-" icon="px-fea:asset"></px-icon>Asset Information</span>
         <div class="flex u-mt">
           <div class="flex__item">
             <span class="label">Customer</span><br/>
