runtime theming for demo

--- a/demo/px-inbox-demo.html
+++ b/demo/px-inbox-demo.html
@@ -17,7 +17,7 @@
 <link rel="import" href="../px-inbox.html" />
 
 <!-- Demo DOM module -->
-<dom-module id="local-element-demo">
+<dom-module id="px-inbox-demo">
   <template>
     <style include="px-demo-styles" is="custom-style">
     :root {
@@ -83,7 +83,7 @@
 </dom-module>
 <script>
   Polymer({
-    is: 'local-element-demo',
+    is: 'px-inbox-demo',
 
     properties: {
 
