--- a/px-inbox.html
+++ b/px-inbox.html
@@ -87,7 +87,7 @@ Custom property | Description | Default
       </ul>
     </div>
     <div id="detail" class="detail">
-      <span class="back-link actionable" on-tap="_goBackToList"><px-icon icon="px-nav:back"></px-icon> Back</span>
+      <span class="back-link actionable u-m-" on-tap="_goBackToList"><px-icon icon="px-nav:back"></px-icon> Back</span>
       <content></content>
     </div>
 
