add support for localization

--- a/px-inbox.html
+++ b/px-inbox.html
@@ -3,13 +3,14 @@
     siblings. When this component is run from its own repo (e.g. tests, examples), we assume the server is started with
     'gulp serve' (or similar server setup) to enable correct finding of bower dependencies for local runs.
 -->
-<link rel="import" href="../polymer/polymer.html"/>
+<link rel="import" href="../polymer/polymer.html" />
 <link rel="import" href="css/px-inbox-styles.html">
 <link rel="import" href="../px-dropdown/px-dropdown.html" />
 <link rel="import" href="../px-icon-set/px-icon-set.html" />
 <link rel="import" href="../px-icon-set/px-icon.html" />
 <link rel="import" href="../px-alert-label/px-alert-label.html" />
 <link rel="import" href="../iron-resizable-behavior/iron-resizable-behavior.html" />
+<link rel="import" href="../app-localize-behavior/app-localize-behavior.html" />
 <script src="../moment/moment.js"></script>
 
 <!--
@@ -49,19 +50,14 @@ Custom property | Description | Default
     <style include="px-inbox-styles"></style>
     <div id="list" class="list flex flex--col">
       <div class="search u-mt u-mh u-mb-">
-        <input class="text-input" value="{{_query::input}}" placeholder="Search"/>
+        <input class="text-input" value="{{_query::input}}" placeholder="[[localize('Search')]]" />
         <px-icon class="search__icon" icon="px-nav:search"></px-icon>
       </div>
       <div class="flex flex--justify flex--middle u-ph u-pb shadow-navigation">
         <div class="flex flex--row flex--middle">
-          <span class="label u-mr--">Sort by:</span>
-          <px-dropdown
-            class="sort-dropdown"
-            select-by="val"
-            button-style="bare"
-            selected="{{sortBy}}"
-            display-value="{{sortBy}}"
-            items='[{"key":"one", "val": "Title"},{"key":"two", "val": "Subtitle"},{"key":"two", "val": "Severity"},{"key":"two", "val": "Date"}]'
+          <span class="label u-mr--">[[localize('Sort by')]]:</span>
+          <px-dropdown id="dropdown" class="sort-dropdown" select-by="key" button-style="bare" selected="{{sortBy}}" display-value="{{localize(sortBy)}}"
+            items='[{"key":"Title", "val": "Title"},{"key":"Subtitle", "val": "Subtitle"},{"key":"Severity", "val": "Severity"},{"key":"Date", "val": "Date"}]'
             disable-clear>
           </px-dropdown>
         </div>
@@ -87,7 +83,7 @@ Custom property | Description | Default
       </ul>
     </div>
     <div id="detail" class="detail">
-      <span class="back-link actionable u-m-" on-tap="_goBackToList"><px-icon icon="px-nav:back"></px-icon> Back</span>
+      <span class="back-link actionable u-m-" on-tap="_goBackToList"><px-icon icon="px-nav:back"></px-icon>[[localize('Back')]]</span>
       <content></content>
     </div>
 
@@ -100,12 +96,17 @@ Custom property | Description | Default
     is: 'px-inbox',
 
     behaviors: [
-      Polymer.IronResizableBehavior
+      Polymer.IronResizableBehavior,
+      Polymer.AppLocalizeBehavior
     ],
 
     listeners: {
-      "iron-resize" : "_calculateBounds"
+      "iron-resize": "_calculateBounds"
     },
+
+    observers: [
+      "_updateSortOptions(language, resources, useKeyIfMissing)"
+    ],
 
     /**
     * Event that is fired when the selected item is changed in the list component.
@@ -160,22 +161,72 @@ Custom property | Description | Default
       disableAutoSelect: {
         type: Boolean,
         value: false
+      },
+      /**
+       * A valid IETF language tag as a string that `px-localize-behavior` will
+       * use to localize this component. Refer to px-localize-behavior for currently supported languages.
+       *
+       * See https://github.com/PolymerElements/app-localize-behavior for API
+       * documentation and more information.
+       */
+      language: {
+        type: String,
+        value: 'en'
+      },
+      /**
+      * Use the key for localization if value for  language is missing. Should
+      * always be true for  our components
+      */
+      useKeyIfMissing: {
+        type: Boolean,
+        value: true
+      },
+      /**
+       * List of strings needing to be localized for this component.
+       */
+      resources: {
+        type: Object,
+        value: function () {
+          return {
+            'en': {
+              "Back": "Back",
+              "Sort by": "Sort by",
+              "Search": "Search",
+              "Title": "Title",
+              "Subtitle": "Subtitle",
+              "Severity": "Severity",
+              "Date": "Date"
+            }
+          }
+        }
       }
+    },
+    /**
+    * Updates the options in the sort dropdown if any of the app-localize properties are changed.
+    */
+    _updateSortOptions: function () {
+      var options = [
+        { "key": "Title", "val": this.localize("Title") },
+        { "key": "Subtitle", "val": this.localize("Subtitle") },
+        { "key": "Severity", "val": this.localize("Severity") },
+        { "key": "Date", "val": this.localize("Date") }
+      ];
+      this.$.dropdown.set('items', options);
     },
 
     /**
     * Figures out whether the item is currently selected.
     */
-    _computeClass: function(selectedId, id) {
+    _computeClass: function (selectedId, id) {
       return (selectedId && String(selectedId) === String(id)) ? 'selected' : '';
     },
 
     /**
     * Adds visual style to the currently selected item and triggers display of the details.
     */
-    _selectItem: function(evt) {
+    _selectItem: function (evt) {
       var otherItems = Polymer.dom(this.root).querySelectorAll('.selected');
-      for (var i=0; i<otherItems.length; i++) {
+      for (var i = 0; i < otherItems.length; i++) {
         otherItems[i].classList.remove("selected");
       };
 
@@ -189,9 +240,9 @@ Custom property | Description | Default
     * of the px-inbox and react accordingly - in constrained situations, the list and detail
     * will not be displayed simultaneously but will toggle back and forth instead.
     */
-    _calculateBounds: function(evt) {
-      this.debounce('resize', function() {
-        if(parseInt(window.getComputedStyle(this).getPropertyValue('width')) < 700) {
+    _calculateBounds: function (evt) {
+      this.debounce('resize', function () {
+        if (parseInt(window.getComputedStyle(this).getPropertyValue('width')) < 700) {
           this.toggleClass('constrained', true, this.$.list);
           this.toggleClass('constrained', true, this.$.detail);
         }
@@ -207,17 +258,17 @@ Custom property | Description | Default
     * For small form factors, these classes are toggled in order to toggle back and forth
     * between the list and detail views.
     */
-    _goBackToList: function(evt) {
+    _goBackToList: function (evt) {
       this.toggleClass('detail-active', false, this.$.list);
       this.toggleClass('list-active', true, this.$.detail);
     },
     /**
     * Formats the date strings in each listItem to display correctly in the table using Moment.js.
     */
-    _formatDates: function() {
-      for (var i=0; i<this.listItems.length; i++) {
+    _formatDates: function () {
+      for (var i = 0; i < this.listItems.length; i++) {
         // If date is defined and recognized as a valid date string, convert to a friendlier display format.
-        if(this.listItems[i].date && moment(this.listItems[i].date).isValid()) {
+        if (this.listItems[i].date && moment(this.listItems[i].date).isValid()) {
           this.listItems[i].formattedDate = moment(this.listItems[i].date).fromNow();
         }
         // If not recognized as a valid date string, just display whatever was passed in.
@@ -226,14 +277,14 @@ Custom property | Description | Default
         }
       };
       // Unless otherwise specified, the first item in the array is selected on load.
-      if(!this.disableAutoSelect && !this.selectedItem && this.listItems && this.listItems.length > 0) {
+      if (!this.disableAutoSelect && !this.selectedItem && this.listItems && this.listItems.length > 0) {
         this.selectedItem = this.listItems[0].id;
       }
     },
     /**
     * Searches through the list titles and subtitles and filters based on the query.
     */
-    _computeFilter: function(query) {
+    _computeFilter: function (query) {
       if (!query) {
         // set filter to null to disable filtering
         return null;
@@ -241,87 +292,87 @@ Custom property | Description | Default
       else {
         // return a filter function for the current search query
         query = query.toLowerCase();
-        return function(listItem) {
+        return function (listItem) {
           var title = listItem.title.toLowerCase();
           var subtitle = listItem.subtitle.toLowerCase();
           return (title.indexOf(query) != -1 ||
-              subtitle.indexOf(query) != -1);
+            subtitle.indexOf(query) != -1);
         };
       }
     },
     /**
     * Sort function for the array of list items.
     */
-    _computeSort: function(sortBy,sortOrder) {
+    _computeSort: function (sortBy, sortOrder) {
       sortBy = sortBy ? sortBy.toLowerCase() : '';
       var asc = sortOrder === 'ascending';
       // return sort function which maps severities to numeric values
-      if(sortBy === "severity" && asc) {
-        return function(a, b) {
+      if (sortBy === "severity" && asc) {
+        return function (a, b) {
           var severities = {
-            "important":4,
-            "warning":3,
-            "error":2,
-            "information":1,
-            "":0
+            "important": 4,
+            "warning": 3,
+            "error": 2,
+            "information": 1,
+            "": 0
           }
           return severities[b.severity] - severities[a.severity];
         }
       }
-      else if(sortBy === "severity" && !asc) {
-        return function(b, a) {
+      else if (sortBy === "severity" && !asc) {
+        return function (b, a) {
           var severities = {
-            "important":4,
-            "warning":3,
-            "error":2,
-            "information":1,
-            "":0
+            "important": 4,
+            "warning": 3,
+            "error": 2,
+            "information": 1,
+            "": 0
           }
           return severities[b.severity] - severities[a.severity];
         }
       }
       // return sort function which correctly compares dates
-      else if(sortBy === "date" && asc) {
-        return function(a,b) {
+      else if (sortBy === "date" && asc) {
+        return function (a, b) {
           return (a.date > b.date) ? -1 : (a.date < b.date) ? 1 : 0;
         }
       }
-      else if(sortBy === "date" && !asc) {
-        return function(b,a) {
+      else if (sortBy === "date" && !asc) {
+        return function (b, a) {
           return (a.date > b.date) ? -1 : (a.date < b.date) ? 1 : 0;
         }
       }
       // return sort function which compares the items mathematically
-      else if(asc) {
-        return function(a, b) {
+      else if (asc) {
+        return function (a, b) {
           return (a[sortBy] < b[sortBy]) ? -1 : (a[sortBy] > b[sortBy]) ? 1 : 0;
         }
       }
       else {
-        return function(b, a) {
+        return function (b, a) {
           return (a[sortBy] < b[sortBy]) ? -1 : (a[sortBy] > b[sortBy]) ? 1 : 0;
         }
       }
     },
-    _getLabel: function(severity) {
-      if(severity === 'important') return '1';
-      if(severity === 'warning') return '2';
-      if(severity === 'error') return '3';
-      if(severity === 'information') return '4';
+    _getLabel: function (severity) {
+      if (severity === 'important') return '1';
+      if (severity === 'warning') return '2';
+      if (severity === 'error') return '3';
+      if (severity === 'information') return '4';
     },
-    _reverseSort: function() {
-      if(this.sortOrder === 'ascending') {
+    _reverseSort: function () {
+      if (this.sortOrder === 'ascending') {
         this.sortOrder = 'descending';
         this.$.sortIcon.icon = 'px-nav:down';
       }
-      else if(this.sortOrder === 'descending') {
+      else if (this.sortOrder === 'descending') {
         this.sortOrder = 'ascending';
         this.$.sortIcon.icon = 'px-nav:up';
       }
     },
-    _updateClass: function() {
-      this.debounce('update-class', function() {
-        if(this.$.list__body.scrollTop > 0) {
+    _updateClass: function () {
+      this.debounce('update-class', function () {
+        if (this.$.list__body.scrollTop > 0) {
           this.toggleClass('shadow-component', true, Polymer.dom(this.root).querySelector('.list__header'));
         }
         else {
@@ -330,4 +381,5 @@ Custom property | Description | Default
       }, 50);
     }
   });
+
 </script>
