tweak spacing again

--- a/px-inbox.html
+++ b/px-inbox.html
@@ -83,7 +83,7 @@ Custom property | Description | Default
       </ul>
     </div>
     <div id="detail" class="detail">
-      <span class="back-link actionable u-m-" on-tap="_goBackToList"><px-icon icon="px-nav:back"></px-icon>[[localize('Back')]]</span>
+      <span class="back-link actionable u-m-" on-tap="_goBackToList"><px-icon class="u-mr--" icon="px-nav:back"></px-icon>[[localize('Back')]]</span>
       <content></content>
     </div>
 
