add device flags

--- a/demo/px-inbox-demo.html
+++ b/demo/px-inbox-demo.html
@@ -28,7 +28,8 @@
     <!-- Header -->
     <px-demo-header
         module-name="px-inbox"
-        description="A list/detail or “Inbox” view is appropriate when a user has a list of items, with detailed information or actions associated with each item, e.g. alerts associated with a fleet of assets, or open cases in a field service engineer’s queue. It allows the user to switch back and forth between items without losing the higher level overview, or having to navigate back and forth between screens repeatedly.">
+        description="A list/detail or “Inbox” view is appropriate when a user has a list of items, with detailed information or actions associated with each item, e.g. alerts associated with a fleet of assets, or open cases in a field service engineer’s queue. It allows the user to switch back and forth between items without losing the higher level overview, or having to navigate back and forth between screens repeatedly."
+        mobile tablet desktop>
     </px-demo-header>
 
     <!-- Interactive -->
