fix hover state (#11)

--- a/px-inbox.html
+++ b/px-inbox.html
@@ -31,6 +31,7 @@ Custom property | Description | Default
 `--px-inbox-border-color` | Border color for list items |
 `--px-inbox-secondary-text-color` | Text color for subtitle and date |
 `--px-inbox-li-background-color` | Background color for list items |
+`--px-inbox-li-background-color--hover` | Background color for list item when hovered |
 `--px-inbox-li-background-color--selected` | Background color for selected list item |
 `--px-inbox-li-text-color--selected` | Text color for selected list item |
 `--px-inbox-icon-outline-color` | Outline color for all alert icons |
