allow severity of undefined in sort order

--- a/px-inbox.html
+++ b/px-inbox.html
@@ -315,7 +315,8 @@ Custom property | Description | Default
             "warning": 3,
             "error": 2,
             "information": 1,
-            "": 0
+            "": 0,
+            undefined: 0
           }
           return severities[b.severity] - severities[a.severity];
         }
@@ -327,7 +328,8 @@ Custom property | Description | Default
             "warning": 3,
             "error": 2,
             "information": 1,
-            "": 0
+            "": 0,
+            undefined: 0
           }
           return severities[b.severity] - severities[a.severity];
         }
