remove old css variables from documentation

--- a/px-inbox.html
+++ b/px-inbox.html
@@ -22,7 +22,7 @@
     </px-inbox>
 
 ### Styling
-The following custom properties are available for styling:
+The following custom properties are available for styling. See also px-alert-label for the variables to use for the badge icons.
 
 Custom property | Description | Default
 :----------------|:-------------|:----------
@@ -34,11 +34,6 @@ Custom property | Description | Default
 `--px-inbox-li-background-color--hover` | Background color for list item when hovered |
 `--px-inbox-li-background-color--selected` | Background color for selected list item |
 `--px-inbox-li-text-color--selected` | Text color for selected list item |
-`--px-inbox-icon-outline-color` | Outline color for all alert icons |
-`--px-inbox-alert-color` | Background color for level 1 alert icons |
-`--px-inbox-warning-color` | Background color for level 2 alert icons |
-`--px-inbox-error-color` | Background color for level 3 alert icons |
-`--px-inbox-information-color` | Background color for level 4 alert icons |
 
 @element px-inbox
 @blurb A list/detail or "Inbox" view for drilling down on items for more information.
